--- a/area_setting.csv.template
+++ b/area_setting.csv.template
@@ -3,4 +3,43 @@ venueName,venueId,district
 九龍城體育館,228,KC
 土瓜灣體育館,233,KC
 九龍公園體育館,307,YTM
+界限街體育館,308,YTM
+旺角體育館,309,YTM
+油麻地體育館,310,YTM
+尖沙咀體育館,311,YTM
+佐敦體育館,312,YTM
+油尖旺區體育館,313,YTM
+深水埗體育館,314,SSP
+長沙灣體育館,315,SSP
+荔枝角體育館,316,SSP
+大角咀體育館,317,SSP
+美孚體育館,318,SSP
+石硤尾體育館,319,SSP
+九龍灣體育館,320,KWT
+啟德體育館,321,KWT
+觀塘體育館,322,KWT
+牛頭角體育館,323,KWT
+藍田體育館,324,KWT
+秀茂坪體育館,325,KWT
+將軍澳體育館,326,ST
+西貢體育館,327,ST
+坑口體育館,328,ST
+大埔體育館,330,NTN
+元朗體育館,331,NTN
+天水圍體育館,332,NTN
+屯門體育館,333,NTN
+葵青體育館,334,NTN
+荃灣體育館,335,NTN
+沙田體育館,336,NTN
+大圍體育館,337,NTN
+馬鞍山體育館,338,NTN
+粉嶺體育館,339,NTN
+上水體育館,340,NTN
+北區體育館,341,NTN
+東涌體育館,342,NTN
+離島體育館,343,NTN
+屯門鄉事會所體育館,344,NTN
+屯門公園體育館,345,NTN
+屯門市中心體育館,346,NTN
+
 
